kubernetes/adminer.yml
apiVersion: v1
kind: Pod
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  containers:
  - name: adminer
    image: adminer:4.8.1
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
