kubernetes/microservices.yml
# Ordini
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordini-deployment
spec:
  selector:
    matchLabels:
      app: ordini
  template:
    metadata:
      labels:
        app: ordini
    spec:
      containers:
      - name: ordini
        image: ghcr.io/a12andre31/unipr-ordini:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: ordini-config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
          readOnly: true
        - name: shared-cookie-keys
          mountPath: /root/.aspnet/DataProtection-Keys
      volumes:
      - name: ordini-config-volume
        configMap:
          name: ordini-config
      - name: shared-cookie-keys
        persistentVolumeClaim:
          claimName: shared-cookie-keys-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ordini-service
spec:
  selector:
    app: ordini
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# Magazzino
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magazzino-deployment
spec:
  selector:
    matchLabels:
      app: magazzino
  template:
    metadata:
      labels:
        app: magazzino
    spec:
      containers:
      - name: magazzino
        image: ghcr.io/a12andre31/unipr-magazzino:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: magazzino-config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
          readOnly: true
        - name: shared-cookie-keys
          mountPath: /root/.aspnet/DataProtection-Keys
      volumes:
      - name: magazzino-config-volume
        configMap:
          name: magazzino-config
      - name: shared-cookie-keys
        persistentVolumeClaim:
          claimName: shared-cookie-keys-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: magazzino-service
spec:
  selector:
    app: magazzino
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# Pagamenti
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pagamenti-deployment
spec:
  selector:
    matchLabels:
      app: pagamenti
  template:
    metadata:
      labels:
        app: pagamenti
    spec:
      containers:
      - name: pagamenti
        image: ghcr.io/a12andre31/unipr-pagamenti:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: pagamenti-config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
          readOnly: true
        - name: shared-cookie-keys
          mountPath: /root/.aspnet/DataProtection-Keys
      volumes:
      - name: pagamenti-config-volume
        configMap:
          name: pagamenti-config
      - name: shared-cookie-keys
        persistentVolumeClaim:
          claimName: shared-cookie-keys-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pagamenti-service
spec:
  selector:
    app: pagamenti
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# WebApp
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: ghcr.io/a12andre31/unipr-webapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: webapp-config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
          readOnly: true
        - name: shared-cookie-keys
          mountPath: /root/.aspnet/DataProtection-Keys
      volumes:
      - name: webapp-config-volume
        configMap:
          name: webapp-config
      - name: shared-cookie-keys
        persistentVolumeClaim:
          claimName: shared-cookie-keys-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
